--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
       <version>4.13</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.github.vincenzopalazzo</groupId>
+      <artifactId>material-ui-swing</artifactId>
+      <version>1.1.1_pre-release_6.1</version>
+    </dependency>
   </dependencies>
 
   <build>
